<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productDetailsViewModel"
            type="com.gratus.adidasconfirmed.ui.viewmodel.fragment.ProductDetailsViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/product_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.view.activity.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!--        layout that will collapse-->
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:contentScrim="?attr/appBackground"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed|enterAlwaysCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator">
                <!--            main view to be displayed when the toolbar is expanded-->
                <ImageView
                    android:id="@+id/product_details_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_348dp"
                    android:contentDescription="@string/product_image"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    app:setImage="@{productDetailsViewModel.productDetails.imgUrl}" />

                <include
                    android:id="@+id/product_details_item"
                    layout="@layout/item_product_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="parallax"
                    bind:product="@{productDetailsViewModel}" />
                <!--            toolbar that will be displayed when the CollapsingToolbar fully collapses-->
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_60dp" />

                <include
                    android:id="@+id/header_details"
                    layout="@layout/header_product_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    app:layout_collapseMode="pin"
                    bind:header="@{productDetailsViewModel}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/height_50dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ProductDetailsFragment">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress_bg"
                android:visibility="gone" />

            <include
                android:id="@+id/exp_card"
                layout="@layout/card_exception"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_48dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_review_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_32dp"
                    android:layout_margin="@dimen/margin_8dp"
                    android:background="@drawable/edit_text_bottom_background"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/write_the_review"
                    android:theme="@style/DescriptionTextGrey" />
            </LinearLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>