...

        <TextView
            android:id="@+id/description_string_text"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="@dimen/height_30dp"
            android:gravity="center|start"
            android:text="@string/description"
            android:theme="@style/SubHeaderTextGrey"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintRight_toLeftOf="@+id/description_text"
            app:layout_constraintTop_toBottomOf="@+id/product_item_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
