...
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:gravity="center"
                android:padding="@dimen/padding_8dp"
                android:text="@{productListItemViewModel.productListResponseItem.priceWithCurrency}"
                android:theme="@style/DescriptionTextBlack"
                app:layout_constraintBottom_toTopOf="@+id/view_details_fab"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintRight_toRightOf="parent" />


            <include
                android:id="@+id/view_details_fab"
...
