...
                android:layout_marginStart="@dimen/margin_8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/search_image"
                android:src="@drawable/ic_search_icon" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/search_the_product"
                android:importantForAutofill="no"
                android:inputType="text"
...
                android:singleLine="true"
                android:textColor="?attr/primaryText"
                android:textColorHint="?attr/secondaryText"
                android:theme="@style/EditText" />

            <ImageButton
                android:id="@+id/search_cancel_image"
                android:layout_width="@dimen/height_40dp"
                android:layout_height="@dimen/height_50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/search_image_cancel"
...
