<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/root_exp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/exp_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_exp_image"
            android:padding="@dimen/padding_8dp"
            android:src="@drawable/ic_view_array_grey_64dp" />

        <TextView
            android:id="@+id/exp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:textColor="?attr/secondaryText"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/padding_8dp"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textColor="?attr/primaryColor"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="gone" />
    </LinearLayout>
</layout>